--- a/src/Left.css
+++ b/src/Left.css
@@ -1,7 +1,9 @@
 .Left {
   float: left;
-  padding:50px;
+  padding:10px;
   border-style: solid;
   border-width: 1px 1px 1px 1px;
-  margin:20px;
+  margin:5px;
+  width:400px;
+  height:450px;
 }
