--- a/src/Right.css
+++ b/src/Right.css
@@ -1,9 +1,11 @@
 .Right {
   float:left;
-  padding:50px;
+  padding:10px;
   border-style: solid;
   border-width: 1px 1px 1px 1px;
-  margin:20px;
+  margin:5px;
+  width:300px;
+  height:100px;
 }
 
 
