--- a/src/Inside.css
+++ b/src/Inside.css
@@ -1,11 +1,12 @@
-.Right {
+.Inside {
   float:left;
   padding:5px;
   border-style: solid;
   border-width: 1px 1px 1px 1px;
   margin:5px;
   width:300px;
-  height:100px;
+  height:150px;
+  background:"#E1E1E1";
 }
 
 
